--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".control.WelcomeActivity" />
+        <activity android:name=".control.HomeScreenActivity"></activity>
     </application>
 
 </manifest>
