--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".control.WelcomeActivity" />
-        <activity android:name=".control.HomeScreenActivity"></activity>
+        <activity android:name=".control.HomeScreenActivity" />
+        <activity android:name=".control.FindGameSearchActivity" />
+        <activity
+            android:name=".control.NavDrawerActivity"
+            android:label="@string/title_activity_nav_drawer"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
