--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,20 @@
         android:theme="@style/AppTheme">
         <activity android:name=".control.LoginActivity" />
         <activity android:name=".control.WelcomeActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".control.HomeScreenActivity" />
         <activity android:name=".control.FindGameSearchActivity" />
         <activity
             android:name=".control.NavDrawerActivity"
             android:label="@string/title_activity_nav_drawer"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".control.HomeScreenActivity"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".control.HomeScreenActivity" />
+        <activity android:name=".control.FindGame"></activity>
     </application>
 
 </manifest>
