updated find game

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,33 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ballersmeet.sruti.ballersmeet">
+<?xml version="1.0" encoding="utf-8"?><manifest xmlns:android="http://schemas.android.com/apk/res/android"
+package="com.ballersmeet.sruti.ballersmeet">
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".control.LoginActivity" />
-        <activity android:name=".control.WelcomeActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".control.HomeScreenActivity" />
-        <activity android:name=".control.FindGameSearchActivity" />
-<<<<<<< HEAD
-        <activity
-            android:name=".control.NavDrawerActivity"
-            android:label="@string/title_activity_nav_drawer"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".control.HomeScreenActivity" />
-        <activity android:name=".control.FindGame"></activity>
-=======
-        <activity android:name=".control.HomeScreenActivity"></activity>
->>>>>>> a6257e23e90efb15cb81205b7221ade680cb8ee2
-    </application>
-
+<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name"
+    android:supportsRtl="true" android:theme="@style/AppTheme">
+    <activity android:name=".control.LoginActivity" />
+    <activity android:name=".control.WelcomeActivity">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+    <activity android:name=".control.HomeScreenActivity" />
+    <activity android:name=".control.FindGame" />
+</application>
 </manifest>
