--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,17 +17,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".control.HomeScreenActivity" />
-        <activity android:name=".control.FindGameSearchActivity" />
-<<<<<<< HEAD
-        <activity
-            android:name=".control.NavDrawerActivity"
-            android:label="@string/title_activity_nav_drawer"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".control.HomeScreenActivity" />
-        <activity android:name=".control.FindGame"></activity>
-=======
-        <activity android:name=".control.HomeScreenActivity"></activity>
->>>>>>> a6257e23e90efb15cb81205b7221ade680cb8ee2
+        <activity android:name=".control.FindGame" />
+        <activity android:name=".control.ProfileActivity" />
+        <activity android:name=".control.StartGameActivity"></activity>
     </application>
 
 </manifest>
