--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,12 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:name="android.support.multidex.MultiDexApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name="android.support.multidex.MultiDexApplication">
+        android:theme="@style/AppTheme">
         <activity android:name=".control.LoginActivity" />
         <activity android:name=".control.WelcomeActivity">
             <intent-filter>
@@ -42,8 +42,12 @@
 
         <activity
             android:name=".control.MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
-        <activity android:name=".control.ViewGameActivity"></activity>
+            android:label="@string/title_activity_maps" />
+        <activity android:name=".control.ViewGameActivity" />
+        <activity
+            android:name=".control.GameAdded"
+            android:label="@string/title_activity_game_added"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
