--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".control.LoginActivity" />
-        <activity android:name=".control.RegisterActivity"/>
+        <activity android:name=".control.RegisterActivity" />
         <activity android:name=".control.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -46,12 +46,13 @@
             android:label="@string/title_activity_maps" />
         <activity android:name=".control.ViewGameActivity" />
         <activity android:name=".control.JoinGameActivity" />
-        <activity android:name=".control.SearchGamesActivity"></activity>
+        <activity android:name=".control.SearchGamesActivity" />
         <activity
             android:name=".control.GameAdded"
             android:label="@string/title_activity_game_added"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".control.JoinGameActivity"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".control.JoinGameActivity" />
+        <activity android:name=".control.MainActivity"></activity>
     </application>
 
 </manifest>
