renamed xml files

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,10 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".control.HomeScreenFragment" />
-        <activity android:name=".control.FindGameFragment" />
-        <activity android:name=".control.ProfileFragment" />
-        <activity android:name=".control.CreateGameFragment" />
+        <fragment android:name=".control.HomeScreenFragment" />
+        <fragment android:name=".control.FindGameFragment" />
+        <fragment android:name=".control.ProfileFragment" />
+        <fragment android:name=".control.CreateGameFragment" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -46,7 +46,7 @@
             android:label="@string/title_activity_maps" />
         <activity android:name=".control.ViewGameActivity" />
         <activity android:name=".control.JoinGameActivity" />
-        <activity android:name=".control.SearchGamesFragment" />
+        <fragment android:name=".control.SearchGamesFragment" />
         <activity
             android:name=".control.GameAdded"
             android:label="@string/title_activity_game_added"
