--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,8 +40,8 @@
         <activity
             android:name=".control.MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".control.ViewGameActivity" />
-        <activity android:name=".control.JoinGameActivity" />
+        <activity android:name=".control.ViewGameFragment" />
+        <activity android:name=".control.JoinGameFragment" />
         <activity
             android:name=".control.GameAdded"
             android:label="@string/title_activity_game_added"
