--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,11 +37,11 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity
-            android:name=".control.MapsActivity"
+        <fragment
+            android:name=".control.MapFragment"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".control.ViewGameFragment" />
-        <activity android:name=".control.JoinGameFragment" />
+        <fragment android:name=".control.ViewGameFragment" />
+        <fragment android:name=".control.JoinGameFragment" />
         <activity
             android:name=".control.GameAdded"
             android:label="@string/title_activity_game_added"
