--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:name="android.support.multidex.MultiDexApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -44,8 +43,7 @@
         <fragment android:name=".control.JoinGameFragment" />
         <activity
             android:name=".control.GameAdded"
-            android:label="@string/title_activity_game_added"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_game_added"></activity>
         <activity android:name=".control.MainActivity"></activity>
     </application>
 
